insert properties into template

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,20 @@
 <h1>
-  Hello {{name}}!
+  {{name}}
 </h1>
+
+<ul>
+  <li>Age: {{age}}</li>
+  <li>Email: {{email}}</li>
+  <li>Address: {{address.street}}, {{address.city}}, {{address.state}}</li>
+</ul>
+
+<h2>
+  Hobbies
+</h2>
+
+<ol>
+  <li *ngFor = "let hobby of hobbies; let i = index">
+    {{i+1}}
+    {{hobby}}
+  </li>
+</ol>
