add button with event listner and handler

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -8,6 +8,10 @@
   <li>Address: {{address.street}}, {{address.city}}, {{address.state}}</li>
 </ul>
 
+<button (click) = "onClick()">
+  Click Me
+</button>
+
 <h2>
   Hobbies
 </h2>
