data service and ngIf added

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -12,39 +12,45 @@
   Click Me
 </button>
 
-<h1>Edit User</h1>
-<form>
-  <div>
-    <label for="name">Name:</label><br>
-    <input type="text" [(ngModel)]="name" name="name">
-  </div>
-  
-  <div>
-    <label for="age">Age:</label><br>
-    <input type="number" [(ngModel)]="age" name="age">
-  </div>
-  
-  <div>
-    <label for="email">Email:</label><br>
-    <input type="text" [(ngModel)]="email" name="email">
-  </div>
+<button (click) = "toggleEdit()">
+    Edit User
+  </button>
 
-  <div>
-      <label for="street">Street:</label><br>
-      <input type="text" [(ngModel)]="address.street" name="street">
+<div *ngIf = isEdit>
+  <h1>Edit User</h1>
+  <form>
+    <div>
+      <label for="name">Name:</label><br>
+      <input type="text" [(ngModel)]="name" name="name">
     </div>
     
     <div>
-      <label for="city">City:</label><br>
-      <input type="text" [(ngModel)]="address.city" name="city">
+      <label for="age">Age:</label><br>
+      <input type="number" [(ngModel)]="age" name="age">
     </div>
     
     <div>
-      <label for="state">State:</label><br>
-      <input type="text" [(ngModel)]="address.state" name="state">
+      <label for="email">Email:</label><br>
+      <input type="text" [(ngModel)]="email" name="email">
     </div>
 
-</form>
+    <div>
+        <label for="street">Street:</label><br>
+        <input type="text" [(ngModel)]="address.street" name="street">
+      </div>
+      
+      <div>
+        <label for="city">City:</label><br>
+        <input type="text" [(ngModel)]="address.city" name="city">
+      </div>
+      
+      <div>
+        <label for="state">State:</label><br>
+        <input type="text" [(ngModel)]="address.state" name="state">
+      </div>
+
+  </form>
+</div>
 
 <h2>
   Hobbies
@@ -61,3 +67,9 @@
     {{hobby}} <button (click) = "deleteHobby(hobby)">X</button>
   </li>
 </ol>
+
+<h1>Posts</h1>
+<div *ngFor = "let post of posts">
+  <h4>{{post.title}}</h4>
+  <p>{{post.body}}</p>
+</div>
